Completed API and removed overflow bug on index page

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Quicksand', sans-serif;
-    overflow: hidden;
     background: #22242e;
 }
 
